템플릿 적용

--- a/ProposalManager/src/main/resources/org/egov/pmProps/pmProp.properties
+++ b/ProposalManager/src/main/resources/org/egov/pmProps/pmProp.properties
@@ -13,36 +13,37 @@
 #   8.  value\uac12 \ub4a4\uc5d0 \uc2a4\ud398\uc774\uc2a4\uac00 \uc874\uc7ac\ud558\ub294 \uacbd\uc6b0 \uc11c\ube14\ub9bf\uc5d0\uc11c \ucc38\uc870\ud560\ub54c\ub294 \uc5d0\ub7ec\ubc1c\uc0dd\ud560 \uc218 \uc788\uc73c\ubbc0\ub85c trim()\ud558\uac70\ub098 \ub9c8\uc9c0\ub9c9 \uacf5\ubc31\uc5c6\uc774 properties \uac12\uc744 \uc124\uc815\ud560\uac83
 #-----------------------------------------------------------------------
 
-# MainPage Setting
-# Globals.MainPage = /cloudmanager/main
+# 1.datasource \uc124\uc815
+#   DB\uc11c\ubc84 \ud0c0\uc785(hsql,  mariaDB, mysql, oracle) - datasource \ubc0f sqlMap \ud30c\uc77c \uc9c0\uc815\uc5d0 \uc0ac\uc6a9\ub428
+Globals.DbType=mariaDB
 
-# \uc6b4\uc601\uc11c\ubc84 \ud0c0\uc785(WINDOWS)
-# Globals.OsType = WINDOWS
+# 2.DBC 
+# 2.1. \uc784\ubca0\ub514\ub4dc DB
+# 2.1.1. \uc784\ubca0\ub514\ub4dc DB : Hsql - local hssql \uc0ac\uc6a9\uc2dc\uc5d0 \uc801\uc6a9
+# Globals.DriverClassName=net.sf.log4jdbc.DriverSpy
+# Globals.Url=jdbc:log4jdbc:hsqldb:hsql://127.0.0.1/sampledb
+# Globals.UserName=sa
 
-# G4C \uc5f0\uacb0\uc6a9 IP (localhost)
-# Globals.LocalIp = 127.0.0.1
 
-# DB\uc11c\ubc84 \ud0c0\uc785(mysql,oracle,mariaDB) - datasource \ubc0f sqlMap \ud30c\uc77c \uc9c0\uc815\uc5d0 \uc0ac\uc6a9\ub428
-Globals.DbType=hsql
-Globals.UserName=sa
-Globals.Password=
+# 2.2. \uc11c\ubc84\ud615 DB
+# 2.2.1. mariaDB
+# Globals.DriverClassName=org.mariadb.jdbc.Driver
+# Globals.Url=jdbc:mariadb://localhost:3306/mariaDB
+# Globals.Url=jdbc:mariadb://cloudmanager.DBnode02.com:71/mariaDB
+# Globals.UserName=CloudDBMaster
+# Globals.Password=cloud!Q@W#E$R5555
 
-# Hsql - local hssql \uc0ac\uc6a9\uc2dc\uc5d0 \uc801\uc6a9
-Globals.DriverClassName=net.sf.log4jdbc.DriverSpy
-Globals.Url=jdbc:log4jdbc:hsqldb:hsql://127.0.0.1/sampledb
+Globals.DriverClassName=org.mariadb.jdbc.Driver
+Globals.Url=jdbc:mariadb://cloudmanager.DBnode02.com:71
+Globals.UserName=CloudDBMaster
+Globals.Password=cloud!Q@W#E$R5555
 
-# MariaDB
-MariaDb.DriverClassName=org.mariadb.jdbc.Driver
-#MariaDb.Url=jdbc:mariadb://localhost:3306/mariaDB
-MariaDb.Url=jdbc:mariadb://cloudmanager.DBnode02.com:71/mariaDB
-MariaDb.UserName=CloudDBMaster
-MariaDb.Password=cloud!Q@W#E$R5555
 
-# mysql
+# 2.2.2. mysql
 #mysql.DriverClassName=com.mysql.jdbc.Driver
 #mysql.Url=jdbc:mysql://127.0.0.1:3306/sht
 
-# Oracle
+# 2.2.3. Oracle
 #oracle.DriverClassName=oracle.jdbc.driver.OracleDriver
 #oracle.Url=jdbc:oracle:thin:@127.0.0.1:1521:example
 
