--- a/ProposalManager/src/main/webapp/WEB-INF/web.xml
+++ b/ProposalManager/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,22 @@
     <url-pattern>/proposal/*</url-pattern>
     <url-pattern>/resources/*</url-pattern>
   </servlet-mapping>
+<!--     <servlet>
+    <servlet-name>rsAction</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>
+                /WEB-INF/config/resources-servlet.xml
+      </param-value>
+    </init-param>
+    <load-on-startup>2</load-on-startup>
+  </servlet>
+    <servlet-mapping>
+    <servlet-name>rsAction</servlet-name>
+    <url-pattern>/resources/*</url-pattern>
+  </servlet-mapping> -->
+
 <servlet>
     <servlet-name>wsAction</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
