--- a/ProposalManagerV1.0/.project
+++ b/ProposalManagerV1.0/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProposalManager</name>
+	<name>ProposalManagerV1.0</name>
 	<comment></comment>
 	<projects>
 	</projects>
