--- a/ProposalManagerV1.0/src/main/webapp/WEB-INF/web.xml
+++ b/ProposalManagerV1.0/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,7 @@
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/proposal/*</url-pattern>
+    <url-pattern>/CMWS/*</url-pattern>
   </filter-mapping>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -77,6 +78,6 @@
   </error-page>
   <error-page>
     <error-code>500</error-code>
-    <location>/proposal/error_404</location>
+    <location>/proposal/error_500</location>
   </error-page>
 </web-app>
